Migrate app to Next.js
